--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "cytoscape": "^3.21.0",
     "cytoscape-edgehandles": "^4.0.1",
+    "cytoscape-layers": "^2.2.0",
+    "cytoscape-popper": "^2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
